feat: promote one-off meetings
Closes #458
